feat: add an heading and an external stylesheet

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch a sketch</title>
+    <link rel="stylesheet" href="./css/main.css">
     <script src="./script/main.js" defer></script>
 </head>
 
 <body>
+    <header class="header">
+        <h1>Etch a sketch</h1>
+    </header>
     <main class="main">
         <div class="grid-container"></div>
     </main>
