--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <h1>Etch a sketch</h1>
     </header>
     <main class="main">
+        <div class="button">
+            <button>Get Grid</button>
+        </div>
         <div class="grid-container"></div>
     </main>
 </body>
